# MiloLang

./: .gitignore  CMakeLists.txt  Makefile  NatvisFile.natvis  X64Compiler.sln  X64Compiler.vcxproj  X64Compiler.vcxproj.filters  __milo_chkstk.asm  __milo_cmain.c  bare.milo  bitmap.milo  blob.milo  bugs.txt  build_libs.bat  chess.milo  command.bat  connect_four.milo  count.bat  defer.milo  div.milo  file.milo  five-letter-words.txt  float_to_int.milo  gl.milo  hello.milo  http_server.milo  linux_test.milo  loop.bat  mandelbrot.milo  math.milo  milo.natvis  openings.txt  overloading.milo  overloading2.milo  polymorph.milo  ray.milo  ray_math.milo  relocations_overflow.milo  runtime.milo  simple.milo  (+16 more)
AOC2021/: day01.milo  day02.milo  day03.milo
AdventOfCode2020/: Day01.milo  Day02.milo  Day03.milo  Day04.milo  Day05.milo  Day06.milo
AdventOfCode2022/: day01a.milo  day01b.milo  day02a.milo  day02b.milo  day03a.milo  day03b.milo  day04a.milo  day04b.milo  day05a.milo  day05b.milo  day06a.milo  day06b.milo  day07a.milo  day07b.milo  day08a.milo  day08b.milo  day09a.milo  day09b.milo  day10a.milo  day10b.milo  day11a.milo  day11b.milo  day12.txt  day12a.milo  day12b.milo  day13a.milo  day13b.milo  day14.txt  day14a.milo  day14b.milo  day15a.milo  day15b.milo
AudioVis/: audio_vis.milo
chess2/: chess2.milo  evaluate.milo  graphics.milo  magic_bitboard.milo  magic_bitboard_gen.milo  search.milo  serialize.milo  state.milo
milo/: ast.milo  first.milo  lexer.milo  main.milo  parser.milo  type_check.milo  types.milo
milo2/: ast.milo  identifier.milo  lexer.milo  main.milo  (+3 more)
(+101 files in other folders)
